--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,12 @@ from = "src"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+requests = "^2.32.3"
 
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.5"
+pytest-mock = "^3.14.0"
 
 [build-system]
 requires = ["poetry-core"]
